fix Hero not showing

--- a/src/mdb/scss/_custom-styles.scss
+++ b/src/mdb/scss/_custom-styles.scss
@@ -2,7 +2,7 @@
 html,
 body,
 header,
-.view, #root, main, #hero-carousel .carousel-inner, #hero-carousel .carousel, #hero-carousel .carousel-item {
+.view, #root, main, #hero-carousel .carousel-inner, #hero-carousel, #hero-carousel .carousel-item {
     height: 100%;
     font-family: "Oxfam Regular", "Roboto", sans-serif;
     font-weight: 300;
@@ -12,7 +12,7 @@ header,
     html,
     body,
     header,
-    .view, #root, main, #hero-carousel .carousel-inner, #hero-carousel .carousel, #hero-carousel .carousel-item {
+    .view, #root, main, #hero-carousel .carousel-inner, #hero-carousel, #hero-carousel .carousel-item {
         height: 100vh;
     }
 }
